--- a/infra/python/data/django_uwsgi.ini
+++ b/infra/python/data/django_uwsgi.ini
@@ -12,9 +12,14 @@ module          = sampleapp.wsgi
 master          = true
 # maximum number of worker processes
 processes       = 10
-# the socket (use the full path to be safe  ポート番号8001でやりとりさせる
+# the socket (use the full path to be safe 
+# ポート番号8001でやりとりさせる
 socket          = :8001
 # ... with appropriate permissions - may be needed
-chmod-socket    = 666
+# memo ソケット通信する場合に以下のようなエラーがでたことがあった。その場合権限設定を行うと正しく動いた
+# connect() to unix:///path/to/your/mysite/mysite.sock failed (13: Permissiondenied) というエラーがでるため権限を設定
+# ちゃんと設定を見直せば権限設定しなくても大丈夫かもしれない。
+# 今回のサンプルはソケット通信ではないためコメントアウトしている
+#chmod-socket    = 666
 # clear environment on exit
 vacuum          = true
